[FIX] overlap

--- a/src/styles/OrderInfo.module.scss
+++ b/src/styles/OrderInfo.module.scss
@@ -62,7 +62,6 @@
     text-align: center;
     color: $--white;
     font-size: $--sm;
-    z-index: 2;
   }
 
   .product-cover {
@@ -71,7 +70,6 @@
     width: 100%;
     height: 100%;
     background: rgba(68, 67, 67, 0.555);
-    z-index: 1;
   }
 }
 
